fix centered header layout issue when using custom logo

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -21,7 +21,7 @@
 	}
 
 	img.custom-logo {
-		display: block;
+		display: inline-block;
 		max-width: 375px;
 	}
 
